# erigon-risc-v-executable-proof-sourcing

./: .gitignore  .gitmodules  go.mod  go.sum  golangci.yml  makefile  readme.md
.github/workflows/: ci.yml
benchmarking/: erigion_block_output.py  erigon_block_output.py  ethrex-cycle-counting.patch  fetch_block.sh  prover_bench_output.py  readme.md
benchmarking/ethrex-prover-bench/: Cargo.toml  README.md  readme.md
benchmarking/ethrex-prover-bench/src/: main.rs
benchmarking/rsp-prover-bench/: Cargo.toml  readme.md
benchmarking/rsp-prover-bench/src/: main.rs
benchmarking/zeth-prover-bench/: Cargo.toml  README.md
benchmarking/zeth-prover-bench/src/: main.rs
cmd/block-prove/: main.go
cmd/debug-transpiler/: main.go
cmd/evm-.prove/: main.go
cmd/evm-prove/: main.go
cmd/proof-verify/: main.go
cmd/replay-tx/: main.go
cmd/test-state/: main.go
cmd/trace-block/: main.go
cmd/tx-prove/: main.go
contracts/: Counter.sol
docs/: benchmarking.md  cli.md  opcode_status.md  setup_and_install.md  testing_setup.md  transpiler_status.md
prover/: compiler.go  prover.go  solc.go  unicorn_runner.go
prover/openvm/: .gitignore  Cargo.toml
prover/openvm/bigint/: Cargo.toml
prover/openvm/bigint/src/: lib.rs
prover/openvm/src/: bigint.rs  main.rs  risc.asm
prover/resources/: lib.asm
tracer/: mock_state_db.go  state_db.go  test.go  tracer.go
transpiler/: compiler.go  golangci.yml  integration_test.go  mock_state_db.go  nested_call_test.go  prover_test.go  test_runner.go  tracer.go  transpiler.go  unicorn_runner.go  unicorn_runner_test.go  vm_prover.go
transpiler/prover/: Cargo.toml
