[package]
name = "rsp-prover-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsp-prover-bench"
path = "src/main.rs"

[dependencies]
# RSP dependencies
rsp-host-executor = { path = "../rsp/crates/executor/host" }
rsp-client-executor = { path = "../rsp/crates/executor/client" }
rsp-primitives = { path = "../rsp/crates/primitives" }
rsp-mpt = { path = "../rsp/crates/mpt", features = ["execution-witness"] }

# Alloy dependencies
alloy-consensus = { version = "1.0.37", default-features = false }
alloy-primitives = { version = "1.3.1" }
alloy-rlp = { version = "0.3.10" }
alloy-rpc-types = { version = "1.0.37" }
alloy-rpc-types-debug = { version = "1.0.37" }
alloy-genesis = { version = "1.0.37" }

# Reth dependencies
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2", default-features = false }

# Revm dependencies
revm = { version = "29.0.1", default-features = false }
revm-primitives = { version = "20.2.1", default-features = false }

# SP1 dependencies
sp1-sdk = "5.1.0"

# Standard dependencies
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
