[package]
name = "zeth-prover-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zeth-prover-bench"
path = "src/main.rs"

[dependencies]
# Zeth dependencies
zeth-core = { path = "../zeth/crates/core" }
zeth-host = { path = "../zeth/crates/host" }

# Alloy dependencies
alloy = { version = "1.0.30", features = ["full"] }
alloy-primitives = { version = "1.3.1" }
alloy-rpc-types = { version = "1.0.30" }
alloy-rpc-types-debug = { version = "1.0.30" }

# Reth dependencies (matching zeth)
reth-stateless = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.7.0" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.7.0" }

# RISC Zero dependencies (matching zeth)
risc0-zkvm = { version = "3.0.3", features = ["prove"] }

# Standard dependencies
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"

[features]
default = []
